--- a/second_sino_japanese_war/problem.yaml
+++ b/second_sino_japanese_war/problem.yaml
@@ -5,12 +5,12 @@ author: Alessandro Giansante
 # Contest name and year
 source: karwa2025
 # contest.region.eu
-source_url: 
+source_url:
 uuid: 8ee7605a-2db1-827c-26ab-6e7cb138ba81
 license: cc by-sa
 rights_owner: author
 # 'default', 'custom', or 'custom interactive'
-validation: custom
+validation: default
 
 # One or more of:
 # case_sensitive
