--- a/second_sino_japanese_war/problem.yaml
+++ b/second_sino_japanese_war/problem.yaml
@@ -10,7 +10,7 @@ uuid: 8ee7605a-2db1-827c-26ab-6e7cb138ba81
 license: cc by-sa
 rights_owner: author
 # 'default', 'custom', or 'custom interactive'
-validation: default
+validation: custom
 
 # One or more of:
 # case_sensitive
