--- a/caverne/problem.yaml
+++ b/caverne/problem.yaml
@@ -11,5 +11,5 @@ source:
   url: https://github.com/karwa-org/karwa2025
 license: cc by-sa
 rights_owner: author
-#limits:
-#  time_limit: 1.0
+limits:
+  time_limit: 1.5
