contest: update logo & title

--- a/contest.yaml
+++ b/contest.yaml
@@ -11,7 +11,7 @@ scoreboard_freeze_duration: 1:00:00
 #penalty_time:               20
 
 # Latex fields:
-title: karwa2025
+title: KARWA 2025
 subtitle: 
 year: 2025
 author: The karwa2025 jury
